Updated my Restaurant Website

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spicy Spot</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <script src="assets/script/script.js"></script>
         <script src="https://kit.fontawesome.com/e6231b39ce.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="menu-bar">
-            <img src="spicyspot-logo.png" alt="Logo">
+            <img src="assets/images/spicyspot-logo.png" alt="Logo">
                 <ul>
                     <li class="home"><a href="index.html">Home</a></li>
                     <li class="spices"><a href="spices.html">Spices</a>
@@ -45,7 +45,7 @@
                     </li>
                     <li class="about_Us"><a href="aboutus.html">About Us</a></li>
                     <li class="contact_us"><a href="contactus.html">Contact Us</a></li>
-                    <li class="cart" style="display: flex;justify-content: center;"><div class="cartimg"><button onclick="cartbutton()" style="cursor: pointer;"><img src="shopping-cart.png" style="width:25px;height:25px;"></button><h1 id="cartmain" style="position: absolute;font-size: 18px;width:25px;background-color: red;margin-left: 20px;margin-top: -10px;border-radius: 50%;">0</h1></div></li>
+                    <li class="cart" style="display: flex;justify-content: center;"><div class="cartimg"><button onclick="cartbutton()" style="cursor: pointer;"><img src="assets/images/shopping-cart.png" style="width:25px;height:25px;"></button><h1 id="cartmain" style="position: absolute;font-size: 18px;width:25px;background-color: red;margin-left: 20px;margin-top: -10px;border-radius: 50%;">0</h1></div></li>
                 </ul>
         </div>
         
@@ -53,14 +53,14 @@
         <h1>Welcome<br>Spicy Spot Restaurant</h1>
         </div>
         <div class="mainimg">
-            <img style="width:750px;" src="food.jpg" alt="background" style="margin-top:4%;margin-bottom:1%;">
+            <img style="width:750px;" src="assets/images/food.jpg" alt="background" style="margin-top:4%;margin-bottom:1%;">
         </div>
         <div class="cartdishes1" style="margin-bottom:20px;margin-top: 20px;">
             <div class="dish1">
                 <div id="d1" style="margin-bottom: 8px;">
                     <h2 style="text-align: center;">Andhra Chilli Chicken</h2>
                     <div style="display: flex;justify-content: center;">
-                        <img src="andhra-chilli-chicken.jpg" alt="Andhra Chilli Chicken" style="height:250px;width:250px;margin-left: 10px;"><br>               
+                        <img src="assets/images/andhra-chilli-chicken.jpg" alt="Andhra Chilli Chicken" style="height:250px;width:250px;margin-left: 10px;"><br>               
                     </div> 
                 </div>
                 <div style="display: flex;justify-content: center;">
@@ -71,7 +71,7 @@
                 <div id="d2" style="margin-bottom: 8px;">
                     <h2 style="text-align: center;">Pork Vindaloo</h2>
                     <div style="display: flex;justify-content: center;">
-                        <img src="pork-vin.webp" alt="Pork Vindaloo" style="height:250px;width:250px;">
+                        <img src="assets/images/pork-vin.webp" alt="Pork Vindaloo" style="height:250px;width:250px;">
                     </div>
                 </div>
                 <div style="display: flex;justify-content: center;">
@@ -82,7 +82,7 @@
                 <div id="d3" style="margin-bottom: 8px;">
                 <h2 style="text-align: center;">Phall Curry</h2>
                 <div style="display: flex;justify-content: center;">
-                    <img src="Chicken_phaal.jpg" alt="Phall Curry" style="height:250px;width:250px;">
+                    <img src="assets/images/Chicken_phaal.jpg" alt="Phall Curry" style="height:250px;width:250px;">
                 </div>
             </div>
                 <div style="display: flex;justify-content: center;">
@@ -93,7 +93,7 @@
                 <div id="d4" style="margin-bottom: 8px;">
                 <h2 style="text-align: center;">Kolhapuri Chicken</h2>
                 <div style="display: flex;justify-content: center;">
-                    <img src="Kolhapuri-chicken.jpeg" alt="Kolhapuri Chicken" style="height:250px;width:250px;margin-right: 10px;">
+                    <img src="assets/images/Kolhapuri-chicken.jpeg" alt="Kolhapuri Chicken" style="height:250px;width:250px;margin-right: 10px;">
                 </div>
             </div>
                 <div style="display: flex;justify-content: center;">
@@ -106,7 +106,7 @@
                 <div id="d5" style="margin-bottom: 8px;">
                 <h2 style="text-align: center;">Carrot Cake</h2>
                 <div style="display: flex;justify-content: center;">
-                    <img src="carror-cake.jpg" alt="Carrot Cake" style="height:250px;width:250px;margin-left: 10px;">
+                    <img src="assets/images/carror-cake.jpg" alt="Carrot Cake" style="height:250px;width:250px;margin-left: 10px;">
                 </div>
             </div>
                 <div style="display: flex;justify-content: center;">
@@ -117,7 +117,7 @@
                 <div id="d6" style="margin-bottom: 8px;">
                 <h2 style="text-align: center;">Cheesecake</h2>
                 <div style="display: flex;justify-content: center;">
-                    <img src="chessecake.jpg" alt="Cheesecake" style="height:250px;width:250px;">
+                    <img src="assets/images/chessecake.jpg" alt="Cheesecake" style="height:250px;width:250px;">
                 </div>
             </div>
                 <div style="display: flex;justify-content: center;">
@@ -128,7 +128,7 @@
                 <div id="d7" style="margin-bottom: 8px;">
                 <h2 style="text-align: center;">Ice Cream</h2>
                 <div style="display: flex;justify-content: center;">
-                    <img src="ice-cream.jpg" alt="Ice Cream" style="height:250px;width:250px;">
+                    <img src="assets/images/ice-cream.jpg" alt="Ice Cream" style="height:250px;width:250px;">
                 </div>
             </div>
                 <div style="display: flex;justify-content: center;">
@@ -139,7 +139,7 @@
                 <div id="d8" style="margin-bottom: 8px;">
                 <h2 style="text-align: center;">MilkShakes</h2>
                 <div style="display: flex;justify-content: center;">
-                    <img src="milkshake.jpg" alt="MilkShakes" style="height:250px;width:250px;">
+                    <img src="assets/images/milkshake.jpg" alt="MilkShakes" style="height:250px;width:250px;">
                 </div>
             </div>
                 <div style="display: flex;justify-content: center;">
