--- a/cinnamon.html
+++ b/cinnamon.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spicy Spot</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <script src="assets/script/script.js"></script>
     </head>
     <body>
         <div class="menu-bar">
-            <img src="spicyspot-logo.png" alt="Logo">
+            <img src="assets/images/spicyspot-logo.png" alt="Logo">
                 <ul>
                     <li class="home"><a href="index.html">Home</a></li>
                     <li class="spices"><a href="spices.html">Spices</a>
@@ -44,11 +44,12 @@
                     </li>
                     <li class="about_Us"><a href="aboutus.html">About Us</a></li>
                     <li class="contact_us"><a href="contactus.html">Contact Us</a></li>
+                    <li class="cart" style="display: flex;justify-content: center;"><div class="cartimg"><button onclick="cartbutton()" style="cursor: pointer;"><img src="assets/images/shopping-cart.png" style="width:25px;height:25px;"></button><h1 id="cartmain" style="position: absolute;font-size: 18px;width:25px;background-color: red;margin-left: 20px;margin-top: -10px;border-radius: 50%;">0</h1></div></li>
                 </ul>
         </div>
         <div class="page">
             <h1>Cinnamon Spice</h1>
-            <img src="cinnamon.jpg" alt="Cinnamon" style="height:250px;width:250px;">
+            <img src="assets/images/cinnamon.jpg" alt="Cinnamon" style="height:250px;width:250px;">
         </div>
         <footer>
             <center><span>&copy 2023 Vasanth</span></center>
