--- a/dishes.html
+++ b/dishes.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spicy Spot</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <script src="assets/script/script.js"></script>
     </head>
     <body>
         <div class="menu-bar">
-            <img src="spicyspot-logo.png" alt="Logo">
+            <img src="assets/images/spicyspot-logo.png" alt="Logo">
                 <ul>
                     <li class="home"><a href="index.html">Home</a></li>
                     <li class="spices"><a href="spices.html">Spices</a>
@@ -44,24 +44,25 @@
                     </li>
                     <li class="about_Us"><a href="aboutus.html">About Us</a></li>
                     <li class="contact_us"><a href="contactus.html">Contact Us</a></li>
+                    <li class="cart" style="display: flex;justify-content: center;"><div class="cartimg"><button onclick="cartbutton()" style="cursor: pointer;"><img src="assets/images/shopping-cart.png" style="width:25px;height:25px;"></button><h1 id="cartmain" style="position: absolute;font-size: 18px;width:25px;background-color: red;margin-left: 20px;margin-top: -10px;border-radius: 50%;">0</h1></div></li>
                 </ul>
         </div>
         <div class="various-dishes">
             <div class="item-1">
                 <h1>Andhra Chilli Chicken</h1>
-                <img src="andhra-chilli-chicken.jpg" alt="Andhra Chilli Chicken" style="height:250px;width:250px;">
+                <img src="assets/images/andhra-chilli-chicken.jpg" alt="Andhra Chilli Chicken" style="height:250px;width:250px;">
             </div><hr>
             <div class="item-2">
                 <h1>Pork Vindaloo</h1>
-                <img src="pork-vin.webp" alt="Pork Vindaloo" style="height:250px;width:250px;">
+                <img src="assets/images/pork-vin.webp" alt="Pork Vindaloo" style="height:250px;width:250px;">
             </div><hr>
             <div class="item-3">
                 <h1>Phall Curry</h1>
-                <img src="Chicken_phaal.jpg" alt="Phall Curry" style="height:250px;width:250px;">
+                <img src="assets/images/Chicken_phaal.jpg" alt="Phall Curry" style="height:250px;width:250px;">
             </div><hr>
             <div class="item-4">
                 <h1>Kolhapuri Chicken</h1>
-                <img src="Kolhapuri-chicken.jpeg" alt="kolhapuri Chicken" style="height:250px;width:250px;margin-bottom:1%;">
+                <img src="assets/images/Kolhapuri-chicken.jpeg" alt="kolhapuri Chicken" style="height:250px;width:250px;margin-bottom:1%;">
             </div><hr>
         </div>
         <footer>
